--- a/src/component/task-list/task-list.component.html
+++ b/src/component/task-list/task-list.component.html
@@ -4,7 +4,15 @@
 <!--  -->
 
 <div class="container">
-  <app-add-task (add)="AddList($event)"></app-add-task>
+  <app-add-task (add)="AddList($event)" ></app-add-task>
+
+  
+  <ul>
+    <li >
+      <app-filter (filter)="filterTasks($event)"></app-filter>
+     
+    </li>
+  </ul>
 
   <div class="row">
     <div class="col-sm-1">ID</div>
